--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>SPECCHEK - PC Performance & Gaming Compatibility</title>
+    <meta name="description" content="Scan your system specs and check gaming compatibility. Discover what your computer can run with our real-time hardware detection." />
   </head>
   <body>
     <div id="root"></div>
